# KnapsackProblem

./: .~lock.Report.odt#  Cargo.toml  Report.odt  crossover_res.txt  mutation_res.txt  out.csv  population.txt  prepare_stats.sh  results.txt  tournament_res.txt
src/: ant_colony.rs  crossover.rs  knap.rs  main.rs  mutation.rs  plot_results.rs  random_population.rs  selection.rs  task1.rs  task2.rs
