[package]
name = "assignment1"
version = "0.1.0"
authors = ["Patryk Stronski <p.stronski13@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.5.5"
csv = "1.1.3"
serde = "1.0.104"
serde_derive = "1.0.105"
shuffle = "0.1.3"
